- Streamer panels now have alternating backgrounds to distinguish every row. - Lots of "grammatical" fixes in the code, to keep a clear pattern/structure of the code.

--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -185,7 +185,7 @@
         </StackPanel>
 
         <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled" VerticalAlignment="Stretch" Grid.Row="2">
-            <StackPanel x:Name="streamerPanel">
+            <StackPanel x:Name="StreamerPanel">
             </StackPanel>
         </ScrollViewer>
 
