--- a/WpfApp1/Styles.xaml
+++ b/WpfApp1/Styles.xaml
@@ -115,7 +115,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Thumb">
-                    <Border x:Name="Ellipse" Margin="-1,0,0,0" Height="16" Width="16" Background="Gray" CornerRadius="10"></Border>
+                    <Border x:Name="Ellipse" Margin="-2,0,0,0" Height="16" Width="16" Background="Gray" CornerRadius="10" Cursor="Hand"></Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter TargetName="Ellipse" Property="Background" Value="White"/>
@@ -159,6 +159,42 @@
                 <Setter Property="Template" Value="{StaticResource Slider}"/>
             </Trigger>
         </Style.Triggers>
+    </Style>
+
+    <Style x:Key="SaveButton" TargetType="{x:Type Button}">
+        <Setter Property="SnapsToDevicePixels" Value="True"/>
+        <Setter Property="OverridesDefaultStyle" Value="True"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+
+                    <Border x:Name="button"  Cursor="Hand" BorderThickness="0" Padding="10, 5, 10, 5" CornerRadius="5">
+                        <ContentPresenter x:Name="content" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <Border.Background>
+                            <LinearGradientBrush EndPoint="1, 0.5" StartPoint="0, 0.5">
+                                <GradientStop Color="#4ab567" Offset="0"/>
+                                <GradientStop Color="#FF21833C" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Border.Background>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter TargetName="button" Property="Border.Background">
+                                <Setter.Value>
+                                    <LinearGradientBrush EndPoint="1, 0.5" StartPoint="0, 0.5">
+                                        <GradientStop Color="#FF30974C" Offset="0"/>
+                                        <GradientStop Color="#FF0F5F25" Offset="1"/>
+                                    </LinearGradientBrush>
+                                </Setter.Value>
+                            </Setter>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Opacity" Value="0.5"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
 </ResourceDictionary>
