Notification History Added
- Notification history feature now added.

--- a/WpfApp1/MainWindow.xaml
+++ b/WpfApp1/MainWindow.xaml
@@ -59,7 +59,7 @@
 
         <!--// Template for the Scrollbar //-->
 
-        <ControlTemplate x:Key="VerticalScrollBar"
+        <!--<ControlTemplate x:Key="VerticalScrollBar"
                          TargetType="{x:Type ScrollBar}">
 
             <Grid>
@@ -68,7 +68,7 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <!--// Border with a background //-->
+                --><!--// Border with a background //--><!--
 
                 <Border
                     Grid.Row="1"
@@ -76,13 +76,13 @@
                     Background="#13161c">
                 </Border>
 
-                <!--// Track - Contaioner for the element that indicates the position of the scrollbar //-->
+                --><!--// Track - Contaioner for the element that indicates the position of the scrollbar //--><!--
 
                 <Track
                     Name="PART_Track"
                     Grid.Row="1"
                     IsDirectionReversed="True">
-                    <!--// Thumb - Control that can be dragged by the user //-->
+                    --><!--// Thumb - Control that can be dragged by the user //--><!--
                     <Track.Thumb>
                         <Thumb
                             Style="{StaticResource ScrollBar_Thumb}">
@@ -92,7 +92,7 @@
 
             </Grid>
 
-        </ControlTemplate>
+        </ControlTemplate>-->
 
         <ImageBrush x:Name="Add_ICon" x:Key="AddIcon" ImageSource="Assets/Add.png"/>
 
@@ -112,14 +112,18 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="30"/>
                 <ColumnDefinition Width="30"/>
+                <ColumnDefinition Width="30"/>
             </Grid.ColumnDefinitions>
 
             <Label x:Name="TitleLabel" Grid.Column="0" Content="StreamTrack" FontSize="16" FontWeight="DemiBold" Padding="5,0,0,0" Foreground="#dedede" VerticalAlignment="Center" HorizontalAlignment="Left" MouseDown="Label_MouseDown"/>
             <StackPanel Grid.Column="1" HorizontalAlignment="Stretch" MouseDown="StackPanel_MouseDown" Background="Transparent"/>
-            <Button Style="{StaticResource SettingsButton}" Grid.Column="2" Height="25" HorizontalAlignment="Stretch" Background="Transparent" BorderThickness="0" Padding="0" Click="Settings">
+            <Button Grid.Column="2" Style="{StaticResource SettingsButton}" Height="25" Click="NotifHistory">
+                <fa:ImageAwesome Icon="Bars" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#dedede"/>
+            </Button>
+            <Button Style="{StaticResource SettingsButton}" Grid.Column="3" Height="25" Click="Settings">
                 <fa:ImageAwesome Icon="Cog" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#dedede"/>
             </Button>
-            <Button Style="{StaticResource ExitButton}" Grid.Column="3" Height="25" HorizontalAlignment="Stretch" Background="Transparent" BorderThickness="0" Padding="5" Click="Exit">
+            <Button Style="{StaticResource ExitButton}" Grid.Column="4" Height="25" Click="Exit">
                 <fa:ImageAwesome Icon="Times" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#dedede"/>
             </Button>
 
