--- a/WpfApp1/NotifHistory.xaml
+++ b/WpfApp1/NotifHistory.xaml
@@ -77,7 +77,9 @@
 
             <Label Grid.Column="0" Content="Notifications" Foreground="White" FontSize="16" FontWeight="DemiBold" Padding="5,0,0,0" MouseDown="Drag" MouseDoubleClick="AddNotif"/>
 
-            <StackPanel Grid.Column="1" Background="Transparent" MouseDown="Drag"/>
+            <StackPanel Grid.Column="1" Background="Transparent" MouseDown="Drag">
+                <fa:ImageAwesome Icon="Bell" Foreground="White" Height="13" Margin="5, 6, 0, 0" HorizontalAlignment="Left"/>
+            </StackPanel>
 
             <Button Style="{StaticResource ExitButton}"
                     Grid.Column="2"
